--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django>=3.0,<4.0
 psycopg2-binary>=2.8,<3.0
-django-extensions>=3.0,<=4.0
+django-extensions>=3.0,<4.0
 black
 
 gunicorn
@@ -8,5 +8,10 @@ gunicorn
 djangorestframework
 markdown
 django-filter
+django-redis>=4.12,<5.0
 
 django-json-widget
+
+ipdb
+
+django-polymorphic
